@@ -1,3 +1,7 @@
+2009-02-21  higepon  <higepon@users.sourceforge.jp>
+
+        * test/input-port.scm : Added tests for file-binary-input-port on positions and buffering.
+
 2009-02-20  higepon  <higepon@users.sourceforge.jp>
 
         * Passes all of string-output-port tests.
